--- a/src/uos/uostmsBundle/Resources/views/Default/gl.html.twig
+++ b/src/uos/uostmsBundle/Resources/views/Default/gl.html.twig
@@ -1,1 +1,56 @@
-{# empty Twig template #}
+{% extends '::base.html.twig' %}
+
+{%block container %}
+<div class="span6">
+
+  {% image '@uosuostmsBundle/Resources/public/img/4th floor/Geodetic lab/pho/DSC00105.jpg'
+    filter='jpegoptim' output='/images/example.jpg' %}
+    <img src="{{ asset_url }}" alt="Example"/>
+{% endimage %}
+    
+    {% image '@uosuostmsBundle/Resources/public/img/4th floor/Geodetic lab/pho/DSC00106.jpg'
+    filter='jpegoptim' output='/images/example.jpg' %}
+    <img src="{{ asset_url }}" alt="Example"/>
+{% endimage %}
+    
+    {% image '@uosuostmsBundle/Resources/public/img/4th floor/Geodetic lab/pho/DSC00107.jpg'
+    filter='jpegoptim' output='/images/example.jpg' %}
+    <img src="{{ asset_url }}" alt="Example"/>
+{% endimage %}
+    
+    {% image '@uosuostmsBundle/Resources/public/img/4th floor/Geodetic lab/pho/DSC00108.jpg'
+    filter='jpegoptim' output='/images/example.jpg' %}
+    <img src="{{ asset_url }}" alt="Example"/>
+{% endimage %}
+    
+    
+    
+        <form  method ="POST" action="{{path('uosuostms_falll')}}">
+                    
+              <button type="submit" class="btn">OK</button>
+            </form>
+        
+        {%endblock%}
+
+{%block sideMenu %}
+
+              <ul class="nav nav-list">
+              <li  class="nav-header" ><b>Home</b></li>
+              
+              {% if job== 'student' %}    
+              
+              <li class="nav-header">Student</li>
+              <li ><a  href="{{ path('uosuostms_fs')}}">Search Timetable </a></li>
+              <li class="active" ><a href="{{ path('uosuostms_falll')}}">Find Free Halls</a></li>
+              
+              {% endif %}
+              
+              {% if job== 'lecturer' %}   
+              
+              <li class="nav-header">Lecturer</li>
+              <li ><a  href="{{ path('uosuostms_fttl')}}">Search Timetable </a></li>
+              <li ><a href="{{ path('uosuostms_ff')}}">Find All</a></li>    
+              {% endif %}
+              </ul>   
+              
+{%endblock%}
