--- a/src/uos/uostmsBundle/Resources/views/Default/findfreer.html.twig
+++ b/src/uos/uostmsBundle/Resources/views/Default/findfreer.html.twig
@@ -32,7 +32,7 @@
                             
                             <td>{{ entity.year }}</td>
                             <td>{{ entity.module }}</td>
-                            <td>{{ lecturer.user_id}} </td>
+                            <td>{{ entity.lec}} </td>
                             <td><a href="{{ path('uosuostms_hall', { 'hall': entity.name }) }}">{{ entity.name }}</a></td>
                             
                         </tr>
